--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"json-server data.json\" \"ng serve\"",
+    "start": "concurrently \"json-server data.json\" \"ng serve --proxy-config proxy.conf.json\"",
     "build": "ng build && copy .htaccess \"dist/world-cup2022/\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -28,9 +27,9 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "concurrently": "^7.4.0",
     "jasmine-core": "~4.0.0",
     "json-server": "^0.17.0",
-    "concurrently": "^7.4.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
